--- a/pages_styles.css
+++ b/pages_styles.css
@@ -1,4 +1,10 @@
-* {
+/* Navigation */ 
+header { 
+background-color: #fbe7e0; padding: 20px;
+ text-align: center; 
+box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+.logo { max-height: 80px; }*  
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
